package proto;
//////////////////////////////////////////////////用户注册或获取密码

///////////////////////////用户获取密码 701 --> 702


//检查onepass白名单
message CS_Get_White
{
	//option (msgid) = 698;
	optional string phone	= 1;
}

//返回 检查onepass白名单
message SC_Back_White
{
	//option (msgid) = 699;
	optional bool is_white_user    = 1; //false不是 true是白名单用户
}

//请求密码
message CS_Get_Password
{
	//option (msgid) = 701;
	optional string phone	= 1;
	optional int32 channel_id	= 2;//渠道id 0博来客
}


//返回密码
message SC_Back_Password
{
	//option (msgid) = 702; 
	optional string phone    = 1;
    optional string password    = 2;
    optional bool is_create_user    = 3;
}

///////////////////////////用户创建角色 703--> 704

//创建角色消息
message CS_Create_User
{
    //option (msgid) = 703;
    optional string	    name    = 1;
    optional uint32     gender      = 2; //0女 1男
    optional E_CONSTELLATION_TYPE constellation   = 3; //星座
}

//创建角色消息返回是否成功
message SC_Create_User_Back
{
    //option (msgid) = 704;
    optional int32	result    = 1;
    optional bool	is_success    = 2;
}

//////////////////////////////////////////////////用户信息初始化流程

/////////////////用户登录消息 710 --> 711

//登录设备类型枚举
enum E_Equipment_TYPE
{
	Equipment_none			= 0;
	Equipment_IOS			= 1;
	Equipment_Android		= 2;
	Equipment_Ipad_IOS		= 3;
	Equipment_Ipad_Android	= 4;
	Equipment_PC			= 5;
	Equipment_NEW			= 6; //其他或新设备
}

//登录方式类型枚举
enum E_Login_TYPE
{
	Login_none		= 0;
	Login_fast		= 1; //快速登陆
	Login_phone		= 2; //手机登陆
	Login_wx		= 3; //微信登陆
}

//登录消息
message CS_Client_Login
{
    //option (msgid) = 710;
    optional string phone    = 1;
    optional string password    = 2;
	optional E_Equipment_TYPE	equipment	= 3; //设备
	optional E_Login_TYPE		login_type	= 4; //登录方式
}


//是否登录成功
message SC_Client_Login_Back
{
    //option (msgid) = 711;
    optional int32	result    = 1;
    optional bool	is_success    = 2;
}

/////////////////心跳 712-->713

//心跳 
message CS_XinTiao
{
    //option (msgid) = 712;
}
//心跳 
message SC_XinTiao
{
    //option (msgid) = 713;
    optional uint32 date = 1;
}

//////////////////////////////////////////////////登录流程

/////////////////初始化信息请求 800 --> 801 ,802, 803, 804

//请求用户信息
message CS_User_Info
{
    //option (msgid) = 800;
}

/////////801

//性别枚举
enum E_GENDER_TYPE
{
	GENDER_0	= 0; //女
	GENDER_1	= 1; //男
}

//星座枚举
enum E_CONSTELLATION_TYPE
{
	CONSTELLATION_NONE	= 0;
	CONSTELLATION_1	= 1; //白羊座
	CONSTELLATION_2	= 2; //金牛座
	CONSTELLATION_3 = 3; //双子座
	CONSTELLATION_4 = 4; //巨蟹座
	CONSTELLATION_5 = 5; //狮子座
	CONSTELLATION_6 = 6; //处女座
	CONSTELLATION_7 = 7; //天秤座
	CONSTELLATION_8 = 8; //天蝎座
	CONSTELLATION_9 = 9; //射手座
	CONSTELLATION_10 = 10; //摩羯座
	CONSTELLATION_11 = 11; //水瓶座
	CONSTELLATION_12 = 12; //双鱼座
}

//角色信息数据结构
message E_User_Info
{
	optional uint64			uid                 = 1; //userid(gameid)
	optional E_GENDER_TYPE	gender              = 2; //性别
	optional string			name                = 3; //名字
	optional uint32     	gold                = 4; //金币
	optional uint32     	BU                  = 5; //BU
	optional int32     	    vigour              = 6; //体力 活力
	optional E_CONSTELLATION_TYPE	xingzhu		= 7; //星座
	optional string			touxiang			= 8; //头像
	optional uint32			sign_date			= 9; //签到天数
	optional string			moxing_ids			= 10; //模型ID
	optional uint32			moxing_id			= 11;
	optional string			changjing_ids		= 12; //场景ID	
	optional uint32			changjing_id		= 13;
	optional bool			bsign				= 14; //1 已签到 0没有答到
	optional bool			bAgent				= 15; //同意 代理协议
	optional bool			bRealName			= 16; //实名认证
	optional bool			bWx					= 17; //是否已绑定微信
	optional string			phone				= 18; //手机号
}

//返回用户信息
message SC_User_Info_Back
{
    //option (msgid) = 801;
    optional E_User_Info e_user_info = 1;
}

/////////802

//背包信息
message SC_User_Info_Bag
{
    //option (msgid) = 802;
    repeated uint32 equipmenting_item =1;
    repeated uint32 having_item= 2;
}

/////////803

//任务执行类型
enum E_TASK_PARAM_TYPE
{
	TASK_PARAM_NONE		= 0;
	TASK_PARAM_TYPE_1	= 1; // 日常任务
	TASK_PARAM_TYPE_2	= 2; // 成长任务
	TASK_PARAM_TYPE_3	= 3; // 活动任务
	TASK_PARAM_TYPE_4	= 4; // 其他任务
}

//任务ui类型
enum E_TASK_MODE
{
	TASK_MODE_NONE	= 0;
	TASK_MODE_1	= 1; // 执行功能
	TASK_MODE_2	= 2; // 打开游戏
	TASK_MODE_3	= 3; // 跳转链接
	TASK_MODE_4	= 4; // 跳转微信
	TASK_MODE_5	= 5; // 跳转UI
}

//任务执行状态
enum E_TASK_STATE
{
	TASK_STATE_NONE				= 0;
    TASK_STATE_CAN_ACCEPT		= 1; // 可接收（未执行）
	TASK_STATE_IS_DOING			= 2; // 进行中的任务
	TASK_STATE_DONE				= 3; // 已完成的任务
	TASK_STATE_CANNOT_ACCEPT	= 4;//不可用
	TASK_STATE_REWARD	= 5; // 已领奖
}

// 任务信息
message E_Task_Info
{
	optional uint32	Task_id			= 1; //任务ID
	optional bytes	Task_name		= 2; //任务名称
	optional bytes	Task_content	= 3; //任务描述
	optional uint32	channel_id		= 4; //任务渠道编号
	optional E_TASK_PARAM_TYPE	Task_param_type	= 5; //任务类型：1、日常任务 2、成长任务 3、活动任务 4、其他任务
	optional E_TASK_MODE	Task_skip_type	= 6; //任务跳转方式：1、跳转UI 2、跳转渠道 3、跳转广告 4、跳转链接
	optional string	skip			= 7; //任务跳转链接地址
	optional string	Task_pre		= 8; //获得任务前提条件
	optional string	arch_task		= 9; //完成任务条件
	optional uint32	u_coin			= 10; //任务获得U币2
	optional uint32	gold_coin		= 11; //任务获得金币
	repeated uint32	prop_id			= 12; //任务获得道具ID
	optional uint32	script_id		= 13; //脚本ID
	optional E_TASK_STATE Task_state  = 14; //任务状态
	optional uint32	step		    = 15; //任务步骤
	optional uint32	step_done		= 16; //任务完成步骤
	optional uint32 id              = 17; //任务排序
	optional uint32 power_point     = 18; //消耗体力
}

//初始化任务
message SC_Init_Task
{
    //option (msgid) = 803;
    repeated E_Task_Info Task = 1;
}

/////////804

//签到奖励表
message SC_Task_Sign_Reward
{
    //option (msgid) = 804;
	repeated uint32 u_coin = 1;
}

/////////806

//跑马灯通知公告
message SC_System_Tips_Str
{
    //option (msgid) = 806;
    optional uint32	type    = 1; //0 中间提示 1弹出框 2走马灯 3聊天框
    optional string	tipStr  = 4; //字符参数1 空值无效
}

/////////807

//同意 代理协议
message CS_User_bAgent
{
    //option (msgid) = 807;
}

//////////////////////////////////////////////////游戏交互

/////////////////小游戏结束成绩 900 --> 

//小游戏结束成绩 
message CS_Game_Over_Score
{
    //option (msgid) = 900;
    optional uint32 gameid = 1;
	optional uint32 value1 = 2;
	optional uint32 value2 = 3;
	optional uint32 value3  = 4;
	optional uint32 value4  = 5;
	optional uint32 value5  = 6;
	optional uint32 value6  = 7;
}

/////////////////小游戏排行榜  901 --> 902

// 所有小游戏排行榜 
message CS_All_Game_Ranking
{
    //option (msgid) = 901;
}

//小游戏排行榜结构
message E_Fast_Game_Ranking
{ 
   optional uint32 gameid	= 1;
   optional uint64 userid	= 2;
   optional string username = 3;
   optional uint32 score	= 4;
   optional uint32 index	= 5;
}
//所有小游戏排行榜 返回
message SC_All_Game_Ranking
{  
   //option (msgid) = 902;
   repeated E_Fast_Game_Ranking rankingdata = 1;
}

/////////////////换装 1000--> 1001

//换装
message CS_User_Use_Equip
{
    //option (msgid) = 1000;
    optional uint32 moxing      = 1;//角色模型
    repeated Item_Slot	item_slot   = 2;//穿着装备列表
}

//换装返回
message SC_User_Use_Equip_Result
{
    //option (msgid) = 1001;
    repeated uint32	equip_itemid    = 1;
}

/////////////////购买物品 1002--> 1003

//装备槽位结构
message Item_Slot
{
    optional uint32	slot  = 1;//槽位(如果槽位是7则为场景购买)
    optional uint32	itemid  = 2;//装备列表
}
//购买物品 商店id 物品id 数量  CM_USER_BUY_ITEM
message CS_User_Buy_Item
{
    //option (msgid) = 1002;
    optional uint32 moxing  = 1;//角色模型
    repeated Item_Slot	item_slot  = 2;//装备列表
}

// 购买添加 (默认穿戴)
message SC_User_Add_Item
{
    //option (msgid) = 1003;
    repeated uint32	itemid    = 1;
}

/////////////////选择场景 1004--> 1005

//选择场景
message CS_User_Select_changjing
{
    //option (msgid) = 1004;
    optional uint32 changjing = 1;
}

//选择场景
message SC_User_Select_changjing
{
    //option (msgid) = 1005;
    optional uint32 changjing = 1;
}

/////////////////签到 1006--> 1007

//签到
message CS_User_Sign
{
    //option (msgid) = 1006;
    optional uint32 date    = 1;
}

//签到 返回
message SC_User_Sign
{
    //option (msgid) = 1007;
    optional uint32 date    = 1;
    optional uint32 is_sign_today    = 2;//是否签到成功
}


/////////////////更新角色信息 1008--> 1009

//更新角色信息 
message CS_User_Info_Update
{
    //option (msgid) = 1008;
    optional string  name                = 1;
    optional E_GENDER_TYPE        gender  = 2;
    optional E_CONSTELLATION_TYPE type    = 3;
}

//更新角色信息 返回
message SC_User_Info_Update
{
    //option (msgid) = 1009;
    optional int32	result    = 1;
    optional bool	is_success    = 2;
}

/////////////////实名认证 1010--> 1011

//实名认证 
message CS_User_Real_Name
{
    //option (msgid) = 1010;
    optional string    name    = 1;
    optional string   code    = 2;
}

//实名认证 返回
message SC_User_Real_Name
{
    //option (msgid) = 1011;
    optional int32	result    = 1;
    optional bool	is_success    = 2;
}

/////////////////绑定微信 1012--> 1013

//绑定微信 
message CS_User_Bind_wx
{
    //option (msgid) = 1012;
    optional string unionid = 1;
    optional string openid  = 2;
}

//绑定微信  返回
message SC_User_Bind_wx
{
    //option (msgid) = 1013;
    optional int32	result    = 1;
    optional bool	is_success    = 2;
}

/////////////////账变 <-- 1014

//账变
message SC_User_UB
{
	//option (msgid) = 1014;
	optional bool     	init_bu             = 1;
	optional int32     	BU                  = 2; //BU
	optional int32     	gold                = 3; //金币
	optional int32     	vigour              = 4; //体力 活力

}

//联欢豆变化
message SC_User_LHD
{
	//option (msgid) = 20103;
	optional int32     	lhd                = 1; //联欢豆
}

/////////////////GPS位置 1015 --> 

//GPS位置 
message CS_User_GPS
{
    //option (msgid) = 1015;
    optional double x   = 1;
    optional double y   = 2;
}

/////////////////更新任务 <-- 1016

//更新任务
message SC_Update_Task
{
	//option (msgid) = 1016; 
	repeated E_Task_Info Task = 1;
}

/////////////////任务奖励 1017 --> 1018

//请求任务奖励
message CS_Get_Task_ReWard
{
    //option (msgid) = 1017;
	repeated uint32	Task_id	 = 1; //任务ID
}

//任务奖励结果结构
message Task_Reward_Result
{
	optional uint32	Task_id	 = 1;
	optional bool  is_success = 2;
}

//发放任务奖励
message SC_Given_Task_ReWard
{
    //option (msgid) = 1018;
	repeated Task_Reward_Result	task_reward_result	 = 1; //任务ID
}

/////////////////用户流水 1019 --> 1020
message CS_User_BU_Steam
{
	//option (msgid) = 1019;
	optional int32 flag =1;
	optional int32 dateFlag =2;
	optional int32 page =3;
	optional int32 pageSize =4;
	optional int64 unixTimestamp =5;
	optional int32 showAll =6;
}
//用户单条流水记录
message User_BU_Stream_Item
{
	optional int32 buValue =1;
	optional string flowTime =2;
	optional string behaviorName =3;
	optional string partnerName =4;
	optional string buType =5;
}
//返回用户流水
message SC__User_BU_Stream
{
	//option (msgid) = 1020;
	optional bool is_success =1;
	repeated User_BU_Stream_Item item =2;
}

//用户充值
message CS_User_Recharge
{
    //option (msgid) = 1021;
    optional uint32 userid      = 1;
    optional uint32 variable    = 2; //充值金额
    optional bytes  code        = 3; //返回码
}

message SC_User_Recharge
{
    //option (msgid) = 1022;
    optional uint32 userid      = 1;
    optional uint32 variable    = 2;
}

//用户提现
message CS_User_Tixian
{
    //option (msgid) = 1023;
    optional uint32 userid      = 1;
    optional uint32 variable    = 2;
}

message SC_User_Tixian
{
    //option (msgid) = 1025;
    optional uint32 userid      = 1;
    optional uint32 variable    = 2;
    optional uint32 utype       = 3; //当前状态 1已提交 2通过审核 3已发放
}
message SC_User_Vip
{
	//option (msgid) = 1024;
    optional int32 vip_day = 1;
}


//更新头像信息
message CS_User_TouXiang_Update
{
	//option (msgid) = 20001;
	optional string  touxiang                = 1;
}

//更新角色信息 返回
message SC_User_TouXiang_Update
{
	//option (msgid) = 20002;
	optional bool	is_success    = 1;
}

//获取玩家邮件
message CS_Get_User_Mail
{
	//option (msgid) = 20003;
//	optional string  uid                = 1;
}

// 用户邮件信息
message E_User_mail
{
	optional string  _id= 1;	//主键id
	optional int32  sid= 2;//系统邮件id
	optional string  title=3;//标题
	optional string  content=4;//内容
	optional int32  start_time= 5;//开始时间 时间戳
	optional int32  end_time= 6;//结束时间 时间戳
	repeated uint32  attach = 7;  //附件  数组为空表示没有附件       // repeated 为数组
	optional uint32  isread= 8;//是否已读 1是 0否
	optional bool  isdelete= 9;//是否已删除
	optional bool  get_attach= 10;//是否领取附件
	optional int32  uid= 11;//用户id
}

//获取玩家邮件 返回
message SC_Get_User_Mail
{
	//option (msgid) = 20004;
	repeated E_User_mail user_mail = 1;
}

//将邮件改为已读
message CS_User_Mail_Read
{
	//option (msgid) = 20005;
	optional string   _id = 1;
}

//将邮件改为已读 返回
message SC_User_Mail_Read
{
	//option (msgid) = 20006;
	optional bool	is_success = 1;
}

//删除邮件
message CS_User_Mail_Delete
{
	//option (msgid) = 20007;
	repeated string   _id = 1;
}

//删除邮件 返回
message SC_User_Mail_Delete
{
	//option (msgid) = 20008;
	optional bool	is_success = 1;
	repeated string   _id = 2;
}

//玩家有新消息通知 服务器主动推送
message SC_User_New_info
{
	//option (msgid) = 20100;
	optional int32  module_id= 1;//模块 11活动 21道具 31邮件
	repeated string   _id = 2; //对应的具体id
}

//获取排行榜
message CS_User_Get_Rank
{
	//option (msgid) = 20009;
	optional int32  type= 1;//类型 1今日，2本周，3本月
}

// 用户排行榜信息
message E_User_Rank
{
	optional int32  uid= 1;//用户id
	optional string  touxiang=2;//头像
	optional string  name=3;//名称
	optional int32  win_num= 4;//胜局数
	optional int32  rank= 5;//排名
}

//获取排行榜 返回
message SC_User_Get_Rank
{
	//option (msgid) = 20010;
	optional int32  uid= 1;//用户id
	optional string  touxiang=2;//头像
	optional string  name=3;//名称
	optional int32  win_num= 4;//胜局数
	optional int32  rank= 5;//排名 0表示未上榜
	repeated E_User_Rank user_rank = 6;
}

//获取活动信息
message CS_Get_User_Active
{
	//option (msgid) = 20011;
	//	optional string  uid                = 1;
}

// 用户活动信息
message E_User_Active
{
	optional string  _id= 1;	//主键id
	optional string  title= 2;	//活动标题
	optional string  content= 3;	//活动描述
	optional int32  start_time= 4;//开始时间 时间戳
	optional int32  end_time= 5;//结束时间 时间戳
	optional int32  active_type= 6;//活动类型 1中秋节活动模板，2图片活动模板
	optional int32  skip_type= 7;//跳转类型 0不可跳转，1跳转链接，2跳转ui
	optional string  skip_url=8;//跳转地址
	optional string  img_url=9;//活动图片地址
	optional string  open_time=10;//活动开启时间 空表示全天开放
	optional string  close_time=11;//活动关闭时间
	optional string  award_des=12;//获得奖励的条件和奖励描述
	optional int32  totoal_step= 13;//总步骤 0没有，1只有1步，其他
	repeated uint32  attach = 14;  //奖励附件  数组为空表示没有附件       // repeated 为数组
	optional  int32 step= 15;//当前完成
	optional  int32 state= 16;//当前状态 0未完成，1已完成，2已领取
}

//获取活动信息 返回
message SC_Get_User_Active
{
	//option (msgid) = 20012;
	repeated E_User_Active user_active = 1;
}


//获取商城信息
message CS_Get_Goods
{
	//option (msgid) = 20013;
	//	optional string  uid                = 1;
}

// 商品信息
message E_Goods_Info
{
	optional string  _id= 1;	//主键id
	optional string  prop_id= 2;//道具id
	optional string  name= 3;	//道具名称
	optional string  des= 4;	//道具描述
	optional string  img= 5;	//道具图标
//	optional string  active_id= 6;	//对应的活动
//	optional int32  prop_type= 7;//1-消耗品（手动使用）2-获得联欢币（获得时立即自动使用）3-收集品
//	optional int32  use_type= 8;//使用效果1-打开电话输入框2-打开收货人输入框3-获得的物品ID（多个用英文逗号分开）4-跳转UI5-获得联欢币
//	optional string  detail=9;//成功使用后，针对使用效果，填写对应值
//	optional int32  duidie= 10;//堆叠1-是2-否
//	optional int32  active_time = 11;  //有效时限（秒）0表示无限制
	optional int32  mall_type = 6;  //针对商品类型0-不在商城展示1-实物（BU商城）2-话费（BU商城）3-Q币（BU商城）4-联欢币（游戏商城）5-道具（游戏商城）6-门票（游戏商城）7-礼包（游戏商城）,8H5商城优惠券
	optional  int32 price_type= 7;//价格类型0-不需要1-联欢币2-BU币3-RMB
	optional  int32 price= 8;//价格
}

//获取商城信息 返回
message SC_Get_Goods
{
	//option (msgid) = 20014;
	repeated E_Goods_Info goods_info = 1;
}

//获取用户背包信息
message CS_Get_User_Packet
{
	//option (msgid) = 20015;
	//	optional string  uid                = 1;
}

// 用户背包信息
message E_User_Packet
{
	optional string  _id= 1;	//主键id
	optional string  prop_id= 2;//道具id
	optional string  name= 3;	//道具名称
	optional string  des= 4;	//道具描述
	optional string  img= 5;	//道具图标
	optional string  active_id= 6;	//对应的活动
	optional int32  prop_type= 7;//1-消耗品（手动使用）2-获得联欢币（获得时立即自动使用）3-收集品
	optional int32  use_type= 8;//使用效果1-打开电话输入框2-打开收货人输入框3-获得的物品ID（多个用英文逗号分开）4-跳转UI 5-获得联欢币
	optional string  detail=9;//成功使用后，针对使用效果，填写对应值
	optional int32  active_time = 10;  //有效时限（秒）0表示无限制
//	optional int32  duidie= 10;//堆叠1-是2-否
//	optional int32  mall_type = 12;  //针对商品类型0-不在商城展示1-实物（BU商城）2-话费（BU商城）3-Q币（BU商城）4-联欢币（游戏商城）5-道具（游戏商城）
//										6-门票（游戏商城）7-礼包（游戏商城）
//	optional  int32 price_type= 13;//价格类型0-不需要1-联欢币2-BU币3-RMB
//	optional  int32 price= 14;//价格
	optional  int32 num= 11;//拥有的数量
	optional  int32 over_time= 12;//到期时间
}

//获取用户背包信息 返回
message SC_Get_User_Packet
{
	//option (msgid) = 20016;
	repeated E_User_Packet user_packet = 1;
}

//购买商品
message CS_User_Buy_Goods
{
	//option (msgid) = 20017;
	optional string   _id = 1;//商品主键
}

//购买商品 返回
message SC_User_Buy_Goods
{
	//option (msgid) = 20018;
	optional bool	is_success = 1;
	optional  int32 code= 2;//错误码  0成功，1商品不存在，2余额不足
}

//用户背包道具信息变动
message SC_User_Packet_Update
{
    //option (msgid) = 20101;
	optional E_User_Packet user_packet = 1;//道具信息
	optional  int32 type= 2;//类型 1添加，2修改，3删除

}

//使用商品
message CS_User_Use_Goods
{
	//option (msgid) = 20019;
	optional string   _id = 1;//主键
	optional int32   num = 2;//数量 默认传1
	optional string   phone = 3;//电话
	optional string   name = 4;//姓名
	optional string   address = 5;//地址

}
//使用商品 返回
message SC_User_Use_Goods
{
	//option (msgid) = 20020;
	optional  int32 code= 1;//错误码  0成功，1数量错误,2失败
}

//领取附件
message CS_User_Get_Attach
{
	//option (msgid) = 20021;
	optional string   _id = 1;//主键
	optional int32   type = 2;//类型 1活动，2邮件
}
//领取附件 返回
message SC_User_Get_Attach
{
	//option (msgid) = 20022;
	optional  int32 code= 1;//0成功，1附件已领取,2失败
}

//领取任务奖励
message CS_User_Get_Task_Award
{
	//option (msgid) = 20023;
	optional int32   task_id = 1;//任务
}
//领取任务奖励 返回
message SC_User_Get_Task_Award
{
	//option (msgid) = 20024;
	optional  int32 code= 1;//0成功，1需要成为超级会员，才能领取奖励,2账号已被冻结,3不是可以领取的状态,4失败,5游戏任务每日最多领取500BU

}

//绑定邀请码
message CS_User_Bind_Invited_Code
{
	//option (msgid) = 20025;
	optional string   agent_id = 1;//邀请码
}
//绑定邀请码 返回
message SC_User_Bind_Invited_Code
{
	//option (msgid) = 20026;
	optional  int32 code= 1;//0成功，1不能绑定自己,2特殊代理不能再绑定其他代理,3代理不存在,4代理已被冻结，5已绑定代理，6失败
}

//获取推广信息
message CS_User_Spread_info
{
    //option (msgid) = 20029;
}

// 推广信息
message E_Spread_Info
{
    optional int32  uid  = 1;	//用户id
    optional string  name= 2;	//用户名称
    optional string  touxiang= 3;	//用户头像
//    optional int32  agent_id= 4;//被绑定用户id
    optional string  bind_time= 4;	//绑定时间
    optional int32  state = 5;	//状态 0未完成 1已完成 2已领取
    optional int32  victory_num= 6;	//胜利次数
}

//获取推广信息 返回
message SC_User_Spread_info
{
    //option (msgid) = 20030;
    optional int32  invited_code= 1;//我的邀请码
    optional int32  agent_id= 2;	//我绑定的邀请码
    repeated E_Spread_Info spread_info = 3;
}

//领取推广奖励
message CS_User_Get_Spread_Award
{
	//option (msgid) = 20031;
	optional int32   uid = 1;//被邀请人的用户id
}
//领取推广奖励 返回
message SC_User_Get_Spread_Award
{
	//option (msgid) = 20032;
	optional  int32 code= 1;//0成功，1当前状态不能领取，2失败
}


//跑马灯信息
message SC_User_Chase_Info
{
	//option (msgid) = 20028;
	optional string content=1;//内容
	optional  int32 state= 2;//状态 1开启，0关闭
}

//公告信息
message SC_User_Notice_Info
{
	//option (msgid) = 20034;
	optional string content=1;//内容
	optional  int32 state= 2;//状态 1开启，0关闭
}

//获取推广获得联欢豆信息
message CS_User_Spread_Lhd_info
{
	//option (msgid) = 20035;
}

// 获得联欢豆信息
message E_Spread_Lhd_Info
{
	optional int32  uid  = 1;	//用户id
	optional string  name= 2;	//用户名称
	optional int32  num= 3;	//大奖赛次数
	optional string  bind_time= 4;	//绑定时间
}

//获取推广获得联欢豆信息 返回
message SC_User_Spread_Lhd_info
{
	//option (msgid) = 20036;
	repeated E_Spread_Lhd_Info spread_lhd_info = 1;
}

//用户邮件变动
message SC_User_Email_Update
{
	//option (msgid) = 20102;
	optional E_User_mail user_mail = 1;//邮件信息
	optional  int32 type= 2;//类型 1添加，2修改，3删除
}









